# bpf-tracing-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: CI.yml  test.yml
bpf-tracing/: Cargo.toml  build.rs
bpf-tracing-include/: Cargo.toml
bpf-tracing-include/include/: bpf_tracing.h
bpf-tracing-include/src/: bpf_tracing.h  event.rs  lib.rs
bpf-tracing/examples/: packets.rs
bpf-tracing/src/: event.rs  lib.rs
bpflog/: Cargo.toml
bpflog/src/: main.rs
example/: Cargo.toml  build.rs
example/src/: main.rs  monitor.bpf.c
examples/: monitor.bpf.c  packets.rs
include/: bpf_tracing.h  bpflog.h  vmlinux.h
src/: lib.rs
