[package]
name = "bpflog"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["fs", "io-util", "rt", "sync", "time"] }

[build-dependencies]
libbpf-cargo = "0.26.1"

[dev-dependencies]
anyhow = "1.0.102"
libbpf-rs = "0.26.1"
libc = "0.2.182"
tempfile = "3.27.0"
