[workspace]
resolver = "2"
members = ["bpf-tracing", "bpf-tracing-include", "example"]

[workspace.package]
license = "MIT"
authors = [
    "lbrndnr <mail@laurinbrandner.ch>",
]
repository = "https://github.com/lbrndnr/bpf-tracing-rs"
readme = "README.md"
keywords = ["ebpf", "bpf", "libbpf", "tracing", "logging"]
