[package]
name = "bpf-tracing-include"
version = "0.0.5"
edition = "2024"
description = "The C headers for bpf-tracing"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1.44"

[features]
source-loc = []
