[package]
name = "bpf-tracing"
version = "0.0.4"
edition = "2024"
description = "An eBPF tracing facility that integrates neatly into Rust's tracing"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
bpf-tracing-include = { path = "../bpf-tracing-include" }
libbpf-rs = "0.26.2"
nix = { version = "0.31.2", features = ["fs", "time"] }
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
