[package]
name = "bpf-tracing"
version = "0.0.5"
edition = "2024"
description = "An eBPF tracing facility that integrates neatly into Rust's tracing"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
bpf-tracing-include = { path = "../bpf-tracing-include", version = "0.0.5" }
libbpf-rs = "0.26.2"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.27.0"
