[package]
name = "bpflog"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = [
    "lbrndnr <mail@laurinbrandner.ch>",
]
description = "A more modern replacement for bpftool's tracelog, supporting bpf-tracing"
repository = "https://github.com/lbrndnr/bpf-tracing-rs"
readme = "../README.md"
keywords = ["ebpf", "bpf", "libbpf", "tracing", "logging"]

[dependencies]
anyhow = "1.0.102"
bpf_tracing = { path = "../bpf-tracing" }
clap = "4.6.0"
signal-hook = "0.4.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
