[package]
name = "bpflog"
version = "0.0.1"
edition = "2024"
description = "A more modern replacement for bpftool's tracelog, supporting bpf-tracing"
publish=false

[dependencies]
anyhow = "1.0.102"
bpf-tracing = { path = "../bpf-tracing" }
clap = "4.6.1"
signal-hook = "0.4.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
