[package]
name = "example"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
bpf-tracing = { path = "../bpf-tracing" }
libbpf-rs = "0.26.1"
libc = "0.2.185"
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[build-dependencies]
libbpf-cargo = "0.26.2"
bpf-tracing-include = { path = "../bpf-tracing-include" }
